<resources>
    <string name="app_name">E-Hentai Reader</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_download">Download</string>
    <string name="action_bookmark">Add bookmark</string>
    <string name="action_unbookmark">Remove bookmark</string>
    <string name="action_share">Share</string>
    <string name="action_filter">Filter</string>
    <string name="action_image_search">Image search</string>
    <string name="action_retry">Retry</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="main_menu">
        <item>Latest</item>
        <item>Favorites</item>
        <item>History</item>
        <item>Downloads</item>
    </string-array>
    <string-array name="sub_menu">
        <item>Settings</item>
        <item>Donate</item>
    </string-array>
    <string name="category_doujinshi">Doujinshi</string>
    <string name="category_manga">Manga</string>
    <string name="category_artistcg">Artist CG</string>
    <string name="category_gamecg">Game CG</string>
    <string name="category_western">Western</string>
    <string name="category_non_h">Non-H</string>
    <string name="category_imageset">Image Set</string>
    <string name="category_cosplay">Cosplay</string>
    <string name="category_asianporn">Asian Porn</string>
    <string name="category_misc">Misc</string>
    <string name="toast_added_to_favorites">Added to favorites</string>
    <string name="toast_removed_from_favorites">Removed from favorites</string>
    <string name="toast_bookmark_added">Bookmark added</string>
    <string name="toast_bookmark_removed">Bookmark removed</string>
    <string name="label_settings">Settings</string>
    <string name="label_latest">Latest</string>
    <string name="label_favorites">Favorites</string>
    <string name="label_history">History</string>
    <string name="label_download">Download</string>
    <string name="search_hint">Search</string>
    <string name="label_rating">Rating</string>
    <string name="label_tags">Tags</string>
    <string name="label_uploader">Uploader</string>
    <string name="pref_first_installed" translatable="false">first_installed</string>
    <string name="pref_account" translatable="false">account</string>
    <string name="pref_account_title">Account</string>
    <string name="pref_login" translatable="false">login</string>
    <string name="pref_login_title">Log in</string>
    <string name="pref_login_summary">Login to E-Hentai</string>
    <string name="pref_logout" translatable="false">logout</string>
    <string name="pref_logout_title">Log out</string>
    <string name="pref_logged_in" translatable="false">logged_in</string>
    <string name="pref_login_memberid" translatable="false">login_memberid</string>
    <string name="pref_login_passhash" translatable="false">login_passhash</string>
    <string name="pref_login_sessionid" translatable="false">login_sessionid</string>
    <string name="pref_view_title">View</string>
    <string name="pref_launch_page" translatable="false">launch_page</string>
    <string name="pref_launch_page_title">Launch position</string>
    <string name="pref_launch_page_default" translatable="false">0</string>
    <string-array name="pref_launch_page_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_screen_orientation" translatable="false">screen_orientation</string>
    <string name="pref_screen_orientation_title">Screen orientation</string>
    <string name="pref_screen_orientation_default" translatable="false">default</string>
    <string-array name="pref_screen_orientation_entries">
        <item>System default</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="pref_screen_orientation_values" translatable="false">
        <item>default</item>
        <item>portrait</item>
        <item>landscape</item>
    </string-array>
    <string name="pref_volume_key_navigation" translatable="false">volume_key_navigation</string>
    <string name="pref_volume_key_navigation_title">Volume key navigation</string>
    <string name="pref_volume_key_navigation_summary">Navigate between pages using volume keys</string>
    <string name="pref_keep_screen_on" translatable="false">keep_screen_on</string>
    <string name="pref_keep_screen_on_title">Keep screen on</string>
    <string name="pref_keep_screen_on_summary">Keep screen on when reading</string>
    <string name="pref_japanese_title" translatable="false">japanese_title</string>
    <string name="pref_japanese_title_title">Display the Japanese title</string>
    <string name="pref_japanese_title_summary">Display the japanese title instead of the original one</string>
    <string name="pref_slideshow_title">Slideshow</string>
    <string name="pref_slideshow_interval" translatable="false">slideshow_interval</string>
    <string name="pref_slideshow_interval_title">Slideshow interval</string>
    <string name="pref_slideshow_interval_default" translatable="false">5</string>
    <string-array name="pref_slideshow_interval_entries">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>30 seconds</item>
        <item>60 seconds</item>
    </string-array>
    <string-array name="pref_slideshow_interval_values" translatable="false">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="pref_slideshow_animation" translatable="false">slideshow_animation</string>
    <string name="pref_slideshow_animation_title">Transition animation</string>
    <string name="pref_slideshow_animation_default" translatable="false">random</string>
    <string-array name="pref_slideshow_animation_entries">
        <item>Random</item>
        <item>Fade</item>
        <item>Slide</item>
        <item>Flip</item>
        <item>Cube</item>
    </string-array>
    <string-array name="pref_slideshow_animation_values" translatable="false">
        <item>random</item>
        <item>fade</item>
        <item>slide</item>
        <item>flip</item>
        <item>cube</item>
    </string-array>
    <string name="pref_download_title">Download</string>
    <string name="pref_download_over_wifi" translatable="false">download_over_wifi</string>
    <string name="pref_download_over_wifi_title">Download over Wi-Fi only</string>
    <string name="pref_download_over_wifi_summary">To reduce carrier data charges, don\'t download over mobile networks</string>
    <string name="pref_auto_download" translatable="false">auto_download</string>
    <string name="pref_auto_download_title">Auto download</string>
    <string name="pref_auto_download_summary">Continue unfinished downloads automatically</string>
    <string name="pref_hide_files" translatable="false">hide_files</string>
    <string name="pref_hide_files_title">Hide files</string>
    <string name="pref_hide_files_summary">Hide downloaded files in the system gallery</string>
    <string name="pref_update_title">Update</string>
    <string name="pref_check_update" translatable="false">check_update</string>
    <string name="pref_check_update_title">Check for updates</string>
    <string name="pref_check_update_summary">Last checked: %s</string>
    <string name="pref_update_checked_at" translatable="false">update_checked_at</string>
    <string name="pref_update_is_interrupted" translatable="false">update_is_interrupted</string>
    <string name="pref_auto_check_update" translatable="false">auto_check_update</string>
    <string name="pref_auto_check_update_title">Automatically check for updates</string>
    <string name="pref_auto_check_update_default" translatable="false">168</string>
    <string-array name="pref_auto_check_update_values" translatable="false">
        <item>0</item>
        <item>24</item>
        <item>168</item>
        <item>720</item>
    </string-array>
    <string-array name="pref_auto_check_update_entries">
        <item>Off</item>
        <item>Every day</item>
        <item>Every week</item>
        <item>Every month</item>
    </string-array>
    <string name="pref_advanced_title">Advanced</string>
    <string name="pref_clear_cache" translatable="false">clear_cache</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_clear_cache_summary">Last cleared: %s</string>
    <string name="pref_clear_history" translatable="false">clear_history</string>
    <string name="pref_clear_history_title">Clear history</string>
    <string name="pref_clear_search" translatable="false">clear_search</string>
    <string name="pref_clear_search_title">Clear search history</string>
    <string name="pref_about" translatable="false">about</string>
    <string name="pref_about_title">About</string>
    <string name="pref_version" translatable="false">version</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_author" translatable="false">author</string>
    <string name="pref_author_title">Author</string>
    <string name="pref_author_summary" translatable="false">SkyArrow (@tommy351)</string>
    <string name="pref_source_code" translatable="false">source_code</string>
    <string name="pref_source_code_title">Source code</string>
    <string name="pref_source_code_summary" translatable="false">GitHub</string>
    <string name="login_title">Log in</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn">Log in</string>
    <string name="login_username_required">Username is required</string>
    <string name="login_password_required">Password is required</string>
    <string name="logging_in">Logging in&#8230;</string>
    <string name="login_failed_title">Login failed</string>
    <string name="login_failed_msg">Maybe you enter a wrong username or password. Please try again.</string>
    <string name="logout_title">Log out</string>
    <string name="logout_msg">Do you want to log out?</string>
    <string name="clear_cache_title">Clear cache</string>
    <string name="clear_cache_msg">Do you want to clear cache?</string>
    <string name="clear_history_title">Clear history</string>
    <string name="clear_history_msg">Do you want to clear history?</string>
    <string name="clear_search_title">Clear search history</string>
    <string name="clear_search_msg">Do you want to clear search history?</string>
    <string name="checking_update">Checking for updates&#8230;</string>
    <string name="check_update_failed_title">Check failed</string>
    <string name="check_update_failed_msg">Failed to fetch update information. Please try again.</string>
    <string name="check_update_available_title">Update available</string>
    <string name="check_update_available_msg">New version %s is available. Do you want to update now?</string>
    <string name="check_update_latest_title">You\'re up to date!</string>
    <string name="check_update_latest_msg">Version %s is currently the latest version.</string>
    <string name="update">Update</string>
    <string name="notification_update_title">Update available</string>
    <string name="notification_update_msg">New version %s of E-Hentai Reader is available.</string>
</resources>