<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_account"
        android:title="@string/pref_account_title">
        <PreferenceScreen
            android:key="@string/pref_login"
            android:title="@string/pref_login_title"
            android:summary="@string/pref_login_summary"/>
        <PreferenceScreen
            android:key="@string/pref_logout"
            android:title="@string/pref_logout_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_view_title">
        <tw.skyarrow.ehreader.widget.ListPreferenceWithSummary
            android:key="@string/pref_launch_page"
            android:title="@string/pref_launch_page_title"
            android:entries="@array/main_tabs"
            android:defaultValue="@string/pref_launch_page_default"
            android:dialogTitle="@string/pref_launch_page_title"
            android:entryValues="@array/pref_launch_page_values"/>
        <CheckBoxPreference
            android:key="@string/pref_volume_key_navigation"
            android:title="@string/pref_volume_key_navigation_title"
            android:summary="@string/pref_volume_key_navigation_summary"
            android:defaultValue="@bool/pref_volume_key_navigation_default"/>
        <CheckBoxPreference
            android:key="@string/pref_keep_screen_on"
            android:title="@string/pref_keep_screen_on_title"
            android:summary="@string/pref_keep_screen_on_summary"
            android:defaultValue="@bool/pref_keep_screen_on_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_download_title">
        <CheckBoxPreference
            android:key="@string/pref_auto_download"
            android:title="@string/pref_auto_download_title"
            android:summary="@string/pref_auto_download_summary"
            android:defaultValue="@bool/pref_auto_download_default"/>
        <CheckBoxPreference
            android:key="@string/pref_download_over_wifi"
            android:title="@string/pref_download_over_wifi_title"
            android:summary="@string/pref_download_over_wifi_summary"
            android:defaultValue="@bool/pref_download_over_wifi_default"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_advanced_title">
        <PreferenceScreen
            android:title="@string/pref_clear_cache_title"
            android:key="@string/pref_clear_cache"/>
        <PreferenceScreen
            android:title="@string/pref_clear_history_title"
            android:key="@string/pref_clear_history"/>
        <PreferenceScreen
            android:title="@string/pref_clear_search_title"
            android:key="@string/pref_clear_search"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_update_title">
        <PreferenceScreen
            android:title="@string/pref_check_update_title"
            android:key="@string/pref_check_update"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_about_title">
        <PreferenceScreen
            android:key="@string/pref_version"
            android:title="@string/pref_version_title"/>
        <PreferenceScreen
            android:key="@string/pref_author"
            android:title="@string/pref_author_title"
            android:summary="@string/pref_author_summary"/>
        <PreferenceScreen
            android:key="@string/pref_source_code"
            android:title="@string/pref_source_code_title"
            android:summary="@string/pref_source_code_summary"/>
    </PreferenceCategory>
</PreferenceScreen>