<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_bookmark"
        android:title="@string/action_bookmark"
        android:icon="@drawable/action_bookmark_outline"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_unbookmark"
        android:title="@string/action_unbookmark"
        android:icon="@drawable/action_bookmark"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/action_download"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_retry"
        android:title="@string/action_retry"
        app:showAsAction="ifRoom"/>
</menu>