<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_to_favorites"
        android:title="@string/action_add_to_favorites"
        android:icon="@drawable/action_favorite_outline"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_remove_from_favorites"
        android:title="@string/action_remove_from_favorites"
        android:icon="@drawable/action_favorite"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/action_download"
        android:title="@string/action_download"
        android:icon="@drawable/action_download"
        app:showAsAction="ifRoom"/>
</menu>